# verdictlens

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  README.md
backend/app/: __init__.py  alerts.py  auth.py  blame.py  blame_engine.py  clickhouse.py  database.py  datasets.py  evaluator.py  live.py  main.py  models.py  playground.py  replay.py  routes.py  settings.py
backend/tests/: conftest.py  test_api.py  test_blame_brutal.py  test_blame_engine.py  test_blame_integration.py  test_main.py
benchmarks/: overhead_test.py
deploy/clickhouse/: init-db.sh
docs/: contributing.md  sdk-reference.md  self-hosting.md
examples/: demo.py  demo_real.py  multi_agent_demo.py  real_openai.py  test_all_features.py  test_blame_nvidia.py  test_blame_real.py  test_e2e_lineage.py  test_full_features.py  test_gemma_nvidia.py  test_workspace_isolation.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AddToDatasetModal.tsx  AuthGate.tsx  Breadcrumbs.tsx  EmptyState.tsx  EvalResultsTable.tsx  FailureCard.tsx  JsonViewer.tsx  KeyboardShortcutsModal.tsx  Layout.tsx  MetricCard.tsx  MonitoringLayout.tsx  MonitoringTabs.tsx  PeekPanel.tsx  ReplayModal.tsx  Skeleton.tsx  SpanTree.tsx  StatusBadge.tsx  SystemStatusBar.tsx  ui.tsx
frontend/src/lib/: api.ts  blamePresentation.ts  export.ts  useKeyboardShortcuts.ts  useLocalStorage.ts  useTheme.ts  useWebSocket.ts  utils.ts
frontend/src/pages/: Alerts.tsx  Blame.tsx  CostExplorer.tsx  Datasets.tsx  Evaluations.tsx  LiveFeed.tsx  Monitoring.tsx  MonitoringOverview.tsx  Playground.tsx  PromptHub.tsx  ReplayPage.tsx  Settings.tsx  TraceDetail.tsx  Traces.tsx  WorkspaceSettings.tsx
frontend/src/test/: EmptyState.test.tsx  MetricCard.test.tsx  StatusBadge.test.tsx
sdk/: .gitignore  README.md  pyproject.toml
sdk/tests/: conftest.py  test_queue.py  test_serializers.py  test_trace.py
sdk/verdictlens/: __init__.py  apiclient.py  cli.py  client.py  config.py  eval.py  hub.py  otel_export.py  patchers.py  pricing.py  queue.py  schema.py  serializers.py  trace.py  types.py
sdk/verdictlens/integrations/: __init__.py  autogen.py  crewai.py  langchain.py  llamaindex.py  openai.py
tests/: test_main.py
verdictlens/: main.py
